# CalcPlot

./: CHANGELOG.md  CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  main.cpp
CrossPlot/: Settings.h
GUI/: Graph_2D_Window.cpp  Graph_2D_Window.h  MainWindow.cpp  MainWindow.h  TipsWindow.cpp  TipsWindow.h
